--- a/code/public/art.html
+++ b/code/public/art.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="autumn">
+<html lang="en" data-theme="coffee">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
         <!--Icons by Icons8-->
         <title>Anaïs | Art Projects</title>
     </head>
-    <body class="bg-base-200 fade-transition">
+    <body class="bg-base-100 fade-transition">
 
       <!--full body container for responsivness & centering-->
       <div class="flex flex-col items-center justify-center">
@@ -24,7 +24,7 @@
             <!-- Hamburger Icon for Mobile (visible on small screens) -->
             <div class="block md:hidden">
               <button id="hamburger-btn" class="text-gray-200">
-                <img src="img/icons8-hamburger-menu-100.png" alt="Hamburger Menu" class="h-10 w-10 hover:scale-125 transition-all duration-300"/>
+                <img src="icons/icons8-hamburger-menu-100-green.png" alt="Hamburger Menu" class="h-10 w-10 hover:scale-125 transition-all duration-300"/>
               </button>
             </div>
   
@@ -49,14 +49,14 @@
 
         <!--Header image-->
         <div class="avatar">
-            <img src="img/icons8-under-construction-100.png" class="w-full h-full object-cover"/>
+            <img src="icons/icons8-under-construction-100-brown.png" class="w-full h-full object-cover"/>
         </div>
 
         <!--Header introduction-->
         <h4 class="text-lg text-center mb-6 px-4 pt-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Sorry! This page is still under construction!</h4>
 
         <div class="mb-6">
-            <button class="btn-red"><a href="index.html">Return to Home</a></button>
+            <button class="btn-main"><a href="index.html">Return to Home</a></button>
         </div>
 
     </div>
@@ -65,17 +65,20 @@
         <aside>
           <p>Copyright © 2025 - All right reserved to Nana</p>
           <nav>
-                <div class="grid grid-flow-col gap-5 pb-2">
-                    <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-                    <img width="50" height="50" src="img/icons8-email-100.png" alt="Email" />
-                    </a>
-                    <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-                    <img width="50" height="50" src="img/icons8-github-100.png" alt="Github" />
-                    </a>
-                    <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-                    <img width="50" height="50" src="img/icons8-linkedin-100.png" alt="Linkedin" />
-                    </a>
-                </div>
+              <div class="grid grid-flow-col gap-5 pb-2">
+                <a href="index.html" class="inline-block text-xl social-link">
+                  <img width="50" height="50" src="icons/icons8-home-100-green.png" alt="Home button"/>
+                </a>
+                <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
+                <img width="50" height="50" src="icons/icons8-email-100-green.png" alt="Email" />
+                </a>
+                <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
+                <img width="50" height="50" src="icons/icons8-github-100-green.png" alt="Github" />
+                </a>
+                <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
+                <img width="50" height="50" src="icons/icons8-linkedin-100-green.png" alt="Linkedin" />
+                </a>
+              </div>
             </nav>
         </aside>
     </footer>
