--- a/code/public/art.html
+++ b/code/public/art.html
@@ -8,6 +8,12 @@
         <title>Anaïs | Art Projects</title>
     </head>
     <body class="bg-base-100 fade-transition">
+      <style>
+        /* Hiding the navbar on the main page because if i remove the chunk of code everything disappears and idk why*/
+        .navbar {
+          display: none;
+        }
+      </style>
 
       <!--full body container for responsivness & centering-->
       <div class="flex flex-col items-center justify-center">
