--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -8,6 +8,12 @@
         <title>Anaïs | CS Projects</title>
     </head>
     <body class="bg-base-200 fade-transition">
+      <style>
+        /* Hiding the navbar on the main page because if i remove the chunk of code everything disappears and idk why*/
+        .navbar {
+          display: none;
+        }
+      </style>
 
       <!--full body container for responsivness & centering-->
       <div class="flex flex-col items-center justify-center">
@@ -190,20 +196,20 @@
         <aside>
           <p>Copyright © 2025 - All right reserved to Nana</p>
           <nav>
-                <div class="grid grid-flow-col gap-5 pb-2">
-                  <a href="index.html" class="inline-block text-xl social-link">
-                    <img width="50" height="50" src="icons/icons8-home-100-green.png" alt="Home button"/>
-                    </a>
-                    <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-                    <img width="50" height="50" src="icons/icons8-email-100-green.png" alt="Email" />
-                    </a>
-                    <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-                    <img width="50" height="50" src="icons/icons8-github-100-green.png" alt="Github" />
-                    </a>
-                    <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-                    <img width="50" height="50" src="icons/icons8-linkedin-100-green.png" alt="Linkedin" />
-                    </a>
-                </div>
+              <div class="grid grid-flow-col gap-5 pb-2">
+                <a href="index.html" class="inline-block text-xl social-link">
+                  <img width="50" height="50" src="icons/icons8-home-100-green.png" alt="Home button"/>
+                </a>
+                <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
+                <img width="50" height="50" src="icons/icons8-email-100-green.png" alt="Email" />
+                </a>
+                <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
+                <img width="50" height="50" src="icons/icons8-github-100-green.png" alt="Github" />
+                </a>
+                <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
+                <img width="50" height="50" src="icons/icons8-linkedin-100-green.png" alt="Linkedin" />
+                </a>
+              </div>
             </nav>
         </aside>
     </footer>
