--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -43,7 +43,7 @@
           </div>
 
           <!-- Mobile menu (hidden by default, shown when hamburger is clicked) -->
-          <div id="mobile-menu" class="md:hidden hidden bg-primary w-full">
+          <div id="mobile-menu" class="md:hidden hidden bg-secondary w-full">
             <a id="cs-link" class="transition-link nav-link-mobile" href="cs.html">Computer Science</a>
             <a id="art-link" class="transition-link nav-link-mobile" href="art.html">Art</a>
             <a id="about-link" class="transition-link nav-link-mobile" href="index.html#about">About</a>
@@ -60,7 +60,7 @@
 
         <section class="project my-16 w-full">
           <!--Personal projects-->
-          <div class="divider divider-secondary text-secondary-content p-4">Personal projects</div>
+          <div class="divider divider-secondary text-secondary-content p-4">Freelance projects</div>
           <div class="container mx-auto px-4">
             <h2 class="text-3xl font-extrabold text-info mb-4">Corto Safaris website</h2>
             <p class="text-lg text-secondary-content mb-4">
