--- a/code/public/index.html
+++ b/code/public/index.html
@@ -53,7 +53,7 @@
         <!--Header image-->
         <div class="avatar">
           <div class="avatar-styling">
-            <img src="img/profile.jpg" class="w-full h-full rounded-full"/>
+            <img src="img/profile2.jpg" class="w-full h-full rounded-full"/>
           </div>
         </div>
 
@@ -61,7 +61,7 @@
         <h1 class="text-4xl font-extrabold text-primary my-6 text-center">Hi, my name is Anaïs</h1>
 
         <!--Header introduction-->
-        <h4 class="text-lg text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
+        <h4 class="text-lg text-secondary-content text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
 
         <div class="divider divider-secondary py-4">Work</div>
         <div class="mb-6 flex flex-wrap justify-center gap-4">
@@ -120,9 +120,9 @@
 
       </div>
 
-      <footer class="footer footer-center bg-primary text-primary-content p-2">
+      <footer class="footer footer-center bg-secondary text-primary-content p-2">
         <aside>
-          <p>Copyright © 2025 - All right reserved to Nana</p>
+          <p class="text-primary">Copyright © 2025 - All right reserved to Nana</p>
           <nav>
             <div class="grid grid-flow-col gap-5 pb-2">
               <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
