--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -59,11 +59,11 @@
         Some are ongoing (like this website), others have <em>questionable</em> syntax (we live and we learn) and a select few are actually, quite fantastic!</h4>
 
         <!--Project filter-->
-        <div role="tablist" class="tabs tabs-bordered tabs-lg mt-4 pt-4">
-          <a role="tab" class="tab tab-active" data-type="all">All</a>
-          <a role="tab" class="tab" data-type="freelance">Freelance</a>
-          <a role="tab" class="tab" data-type="university">University</a>
-          <a role="tab" class="tab" data-type="fun">Just for Fun</a>
+        <div role="tablist" class="tabs tabs-bordered tabs-lg mt-4 pt-4 flex flex-wrap overflow-x-auto">
+          <a role="tab" class="tab tab-active flex-1 sm:flex-none" data-type="all">All</a>
+          <a role="tab" class="tab flex-1 sm:flex-none" data-type="freelance">Freelance</a>
+          <a role="tab" class="tab flex-1 sm:flex-none" data-type="university">University</a>
+          <a role="tab" class="tab flex-1 sm:flex-none" data-type="fun">Just for Fun</a>
         </div>
 
         <section class="project my-16 w-full ">
@@ -196,7 +196,9 @@
           </div>
 
           <!--Just for fun project-->
-
+          <div class="container mx-auto px-4 py-4 mb-4" data-type="fun">
+            <h2 class="text-3xl font-extrabold text-info mb-4">I'm working on it!</h2>
+          </div>
         </section>
 
     </div>
