--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -63,12 +63,12 @@
           <a role="tab" class="tab tab-active flex-1 sm:flex-none" data-type="all">All</a>
           <a role="tab" class="tab flex-1 sm:flex-none" data-type="freelance">Freelance</a>
           <a role="tab" class="tab flex-1 sm:flex-none" data-type="university">University</a>
-          <a role="tab" class="tab flex-1 sm:flex-none" data-type="fun">Just for Fun</a>
+          <!--<a role="tab" class="tab flex-1 sm:flex-none" data-type="fun">Just for Fun</a>-->
         </div>
 
-        <section class="project my-16 w-full ">
+        <section class="project my-16 w-full max-w-6xl mx-auto py-4 px-4 border border-base-content rounded-lg">
           <!--Personal projects-->
-          <div class="container mx-auto px-4" data-type="freelance">
+          <div class="container mx-auto px-4 pb-4 mb-4" data-type="freelance">
             <h2 class="text-3xl font-extrabold text-info mb-4">Corto Safaris website</h2>
             <p class="text-lg text-secondary-content mb-4">
               A website for a tourism company based in Tanzania. A component-based CSS framework was used (Bootstrap) alongside JavaScript and HTML for content & styling, and Jquery for form submission
@@ -88,11 +88,12 @@
               <img src="img/corto_screen2.png" alt="Screenshot of home page" class="rounded-lg shadow-lg max-w-full">
             </div>
           </div>
+          <hr data-type="freelance">
 
           <!--Uni projects-->
           <!--1. Bank management system-->
           <div class="container mx-auto px-4 pb-4 mb-6" data-type="university">
-            <h2 class="text-3xl font-extrabold text-info mb-4">1. Bank Management System</h2>
+            <h2 class="text-3xl font-extrabold text-info mb-4">Bank Management System</h2>
             <p class="text-lg text-secondary-content mb-4">
               A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account among ther features. <br><br> A grade of <strong>63%</strong> was awarded for this project.
             </p>
@@ -115,7 +116,7 @@
           <hr data-type="university">
           <!--2. Classifier marketing campaign-->
           <div class="container mx-auto px-4 py-4 mb-6" data-type="university">
-            <h2 class="text-3xl font-extrabold text-info mb-4">2. Predicting the outcome of a marketing campaign</h2>
+            <h2 class="text-3xl font-extrabold text-info mb-4">Predicting the outcome of a marketing campaign</h2>
             <p class="text-lg text-secondary-content mb-4">
               A classifier used to predict the outcome of a bank marketing campaing using csv data containing several types of data. I tested various classifiers from the sci-kit learn library and utlized certain encoding techniques to achieve the task. <br> <br> A grade of <strong>100%</strong> was awarded for this project.
             </p>
@@ -140,7 +141,7 @@
           <hr data-type="university">
           <!--3. Big data-->
           <div class="container mx-auto px-4 py-4 mb-6" data-type="university">
-            <h2 class="text-3xl font-extrabold text-info mb-4">3. Predicting steel-plates defects</h2>
+            <h2 class="text-3xl font-extrabold text-info mb-4">Predicting steel-plates defects</h2>
             <p class="text-lg text-secondary-content mb-4">
                 I joined a Kaggle playground series competition with the task of predicting steel-plate defects. Submissions were evaluated using area under the ROC curve for each of the defect categories and then averaged to give a final score. <br> <br>
                 I achieved a area under ROC score of 0.86375, which ranked me in the <strong>65th percentile</strong> (1443 out of 2199). The top score of the competition achieved a 0.89782 score.
@@ -167,7 +168,7 @@
           <hr data-type="university">
           <!--4. Deep learning-->
           <div class="container mx-auto px-4 py-4 mb-4" data-type="university">
-            <h2 class="text-3xl font-extrabold text-info mb-4">4. Prediction, Image processing & Transfer learning</h2>
+            <h2 class="text-3xl font-extrabold text-info mb-4">Prediction, Image processing & Transfer learning</h2>
             <p class="text-lg text-secondary-content mb-4">
                 This assessment was separated into 2 parts: Song genre prediction and Image processing & transfer learning. <br>
                 Part 1 focused on predicting the genre of a song using through deep neural network models and methods using a dataset from Kaggle. <br>
@@ -194,11 +195,13 @@
               <img src="img/deepl_ca_screen2.png" alt="Screenshot of model output for image processing" class="rounded-lg shadow-lg max-w-full">
             </div>
           </div>
+          <hr data-type="university">
 
-          <!--Just for fun project-->
+          <!--Just for fun project
           <div class="container mx-auto px-4 py-4 mb-4" data-type="fun">
             <h2 class="text-3xl font-extrabold text-info mb-4">I'm working on it!</h2>
           </div>
+          <hr data-type="fun">-->
         </section>
 
     </div>
